--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7886,4 +7886,10 @@ h1, h2, h3, h4, h5, h6, span, p {
   #schedule .mobile {
     display: block; }
   #schedule .desktop {
-    display: none; } }
+    display: none; }
+  #schedule .opponent, #schedule .tv {
+    display: inline-block;
+    max-width: 100px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis; } }
